--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -14,13 +14,10 @@
         background-image: url('../images/bg.png');
         background-repeat: no-repeat;
         background-size: cover;
-        // padding: 40px 20px 6px 20px;
         display: flex;
         height: 812px;
         width: 375px;
         flex-direction: column;
-        margin: 20px 0;
-        // justify-content: space-between;
     }
 
     &__header {
@@ -83,9 +80,11 @@
     }
 
     &__card {
+        position: relative;
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-bottom: 16px;
     }
 
     &__card-month {
@@ -100,9 +99,6 @@
     }
 
     &__card-year {
-        // background: linear-gradient(0deg, #FFFFFF, #FFFFFF);
-        // mix-blend-mode: normal;
-        // opacity: 0.25;
         border-radius: 19px;
         width: 131px;
         height: 162px;
@@ -126,13 +122,55 @@
         font-size: 24px;
         line-height: 15px;
         color: #FFFFFF;
-        font-weight: bold;
+        font-weight: 600;
     }
 
     &__card-per {
         font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, Roboto, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-        font-size: 24px;
+        font-size: 13px;
         line-height: 15px;
         color: #FFFFFF;
+        font-weight: 400;
+        max-width: 68px;
+    }
+
+    &__card-day {
+        position: absolute;
+        font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, Roboto, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+        font-size: 15px;
+        line-height: 18px;
+        text-align: center;
+        color: #FFFFFF;
+        font-weight: 700;
+        background-color: #495795;
+        width: 151px;
+        height: 21px;
+        left: 39px;
+        top: 120px;
+    }
+
+    &__card-money {
+        margin-top: 43px;
+        font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, Roboto, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+        font-size: 13px;
+        line-height: 15px;
+        text-align: center;
+        color: #FFFFFF;
+    }
+
+    &__btn {
+        // padding: 0 47px 0 48px;
+    }
+
+    &__button {
+        background: linear-gradient(270deg, #1987FF 0%, #19CCFF 100%);
+        border-radius: 30px;
+        font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, Roboto, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+        font-size: 17px;
+        line-height: 17px;
+        text-align: center;
+        color: #FFFFFF;
+        padding: 19px 105px 18px 105px;
+        border: none;
     }
 }
