--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -113,76 +113,9 @@
         width: 144px;
         margin-right: 15px;
         text-align: center;
-        // display: none;
     }
 
-    &__card-year {
-        background: linear-gradient(0deg, rgba(73, 87, 149, 0.197154), rgba(73, 87, 149, 0.197154));
-        border: 1px solid #495795;
-        border-radius: 21px;
-        height: 178px;
-        width: 144px;
-        text-align: center;
-        position: relative;
-        border-right: none;
-        border-top: none;
-        // display: none;
-
-        &::after {
-            content: "";
-            display: block;
-            background: transparent;
-            border: 1px solid #495795;
-            position: absolute;
-            top: -6px;
-            right: -6px;
-            width: 44px;
-            height: 44px;
-            border-radius: 50px;
-            border-right: 1px solid transparent;
-            border-bottom: -1px solid transparent;
-            border-top: 1px solid transparent;
-        }
-
-        &::before {
-            content: '';
-            position: absolute;
-            z-index: 1;
-            width: 38px;
-            height: 38px;
-            background-color: #DB0000;
-            border-radius: 50%;
-            border: none;
-            top: -4px;
-            right: -4px;
-        }
-    }
-
-    &__card-yearlinetop {
-        position: absolute;
-        top: 0;
-        right: 0;
-        left: 15px;
-        height: 1px;
-        width: 97px;
-        background-color: #495795;
-    }
-
-    &__card-yearlineright {
-        position: absolute;
-        top: 31px;
-        right: 0px;
-        height: 130px;
-        width: 1px;
-        background-color: #495795;
-        border-bottom-right-radius: 50%;
-    }
-
-
-
-
-    &__card-title,
-    &__card-yeartitle {
+    &__card-title {
         margin-top: 25px;
         margin-bottom: 11px;
         font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, Roboto, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
@@ -192,8 +125,7 @@
         color: #FFFFFF;
     }
 
-    &__card-price,
-    &__card-yearprice {
+    &__card-price {
         margin-top: 25px;
         margin-bottom: 11px;
         font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, Roboto, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
@@ -223,27 +155,11 @@
         background-color: #495795;
         width: 151px;
         height: 21px;
-        left: 32px;
+        left: 29px;
         top: 120px;
     }
 
-    &__card-yearday {
-        position: absolute;
-        font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, Roboto, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-        font-size: 15px;
-        line-height: 18px;
-        text-align: center;
-        color: #FFFFFF;
-        font-weight: 700;
-        background-color: #495795;
-        width: 151px;
-        height: 21px;
-        left: -4px;
-        top: 120px;
-    }
-
-    &__card-money,
-    &__card-yearmoney {
+    &__card-money {
         margin-top: 43px;
         font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, Roboto, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
         font-size: 13px;
@@ -310,20 +226,6 @@
         margin-bottom: 6px;
     }
 
-    &__card-yearcircle {
-        position: absolute;
-        font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, Roboto, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-        font-size: 12px;
-        line-height: 14px;
-        color: #fff;
-        top: 8px;
-        left: 112px;
-        right: 0;
-        bottom: 0;
-        z-index: 5;
-        font-weight: 700;
-    }
-
     &__card-month--active {
         width: 131px;
         height: 162px;
@@ -356,5 +258,71 @@
         margin-bottom: 10px;
     }
 
+    &__card-yeartitle {
+        margin-top: -23px;
+        margin-bottom: 11px;
+        font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, Roboto, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+        font-size: 19px;
+        line-height: 22px;
+        text-align: center;
+        color: #FFFFFF;
+        position: relative;
+        left: 2px;
+    }
 
+    &__card-yearprice {
+        margin-top: 25px;
+        margin-bottom: -14px;
+        font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, Roboto, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+        font-size: 24px;
+        line-height: 15px;
+        color: #FFFFFF;
+        font-weight: 600;
+        text-align: center;
+        position: relative;
+        left: 4px;
+    }
+
+    &__card-yearday {
+        font-family: "SF Pro Display", -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+        font-size: 15px;
+        line-height: 18px;
+        text-align: center;
+        color: #fff;
+        font-weight: 700;
+        background-color: #495795;
+        width: 151px;
+        height: 21px;
+        left: 2px;
+        top: 28px;
+        position: relative;
+    }
+
+    &__card-yearmoney {
+        font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, Roboto, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+        font-size: 13px;
+        line-height: 15px;
+        text-align: center;
+        color: #FFFFFF;
+        position: relative;
+        top: 36px;
+        text-align: center;
+        left: 3px;
+    }
+}
+
+.item {
+    background-repeat: no-repeat;
+    position: relative;
+    bottom: 349px;
+    right: -195px;
+    border: 1px;
+}
+
+
+text {
+    fill: #fff;
+    font-weight: 700;
+    font-size: 12px;
+    font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, Roboto, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
